# bidump

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  conanfile.txt
src/: CMakeLists.txt  bidmp.cpp  bidmp.hpp  indent.hpp  main.cpp  read.hpp
